# poweredit

./: Cargo.toml  README.md
cafr/: Cargo.toml
cafr/src/: frame.rs  lib.rs  plugin.rs  ui.rs  widget.rs
cafr/src/cde/: mod.rs  windows.rs
cafr/src/widget/: button.rs  mod.rs  text.rs
poweredit/: Cargo.toml
poweredit/src/: main.rs
