[package]
name = "cafr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.3"
raw-window-handle = "0.6.0"
log = "0.4.20"
gdiplus-sys2 = "0.1.0"

[dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "windef",
    "wingdi",
    "ntdef",
]